<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_general_margin"
    android:layout_marginTop="100dp"
    android:onClick="callNoteActivity"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        style="@style/subheader_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author" />

    <EditText
        android:id="@+id/authorField"
        style="@style/input_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_input_hint"
        android:inputType="textPersonName"
        android:text="@string/no_text" />

    <TextView
        android:id="@+id/textView3"
        style="@style/subheader_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_type" />

    <Spinner
        android:id="@+id/noteTypeSelector"
        style="@style/input_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/notes_types" />

    <Button
        android:id="@+id/button"
        style="@style/input_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callNoteActivity"
        android:text="Button" />

</LinearLayout>