<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_general_margin"
    android:orientation="vertical"
    android:textAlignment="textEnd"
    tools:context=".screen.NoteActivity">

    <include
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/authorLabel"
        style="@style/subheader_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/noteType"
        style="@style/subheader_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="textEnd"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/noteContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/note_area_hint"
                android:inputType="textMultiLine"
                android:lines="@integer/text_area_num_lines" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveNote"
                android:text="@string/save_btn_label" />

            <Button
                android:id="@+id/showButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showNote"
                android:text="@string/show_btn_label" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>